--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "cors": "^2.8.5",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "mongoose": "^7.5.4",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "socket.io": "^4.7.2"
   }
 }
