--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "mongoose": "^7.5.4",
+    "node-fetch": "^2.6.6",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2"
   }
